src/objects/KS_Producto_competidor__c.object
<CustomObject>
    <description>KAIZENSTEP. DESACTIVADO. Objeto para registrar la catálogo de productos de competidores. Se ha movido la funcionalidad al objeto standard PRODUCTO con recordtype: Productos de competidores</description>
    <fields>
        <fullName>KS_Competidor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competidor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competidor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Productos competidores</relationshipLabel>
        <relationshipName>Productos_competidores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Fabricante__c</fullName>
        <label>Fabricante</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Serie__c</fullName>
        <label>Serie</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Solucion__c</fullName>
        <label>Solución</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Familias_Soluciones</valueSetName>
        </valueSet>
    </fields>
    <label>Producto competidor</label>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>PC-id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Productos competidores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>